<resources>
    <string name="hide_carrier">Hide Network Carrier</string>
    <string name="back_key_unlock">Back Key Unlock</string>
    <string name="hide_forgot_pin">Hide Forgot PIN</string>
    <string name="smart_unlock">Smart Unlock</string>
    <string name="smart_unlock_desc">Set to automatically unlock locker when the profile condition is met</string>
    <string name="enable_keyboard_typing">Enable Keyboard Typing</string>
    <string name="block_kome_key1">Enable Service Accessibility \n(Recommended)</string>
    <string name="block_kome_key1_desc">Enable C Locker in Service Accessibility to block Home Key, Recent Apps Key and block other Apps</string>
    <string name="block_kome_key2">Set as Home Key</string>
    <string name="block_kome_key2_desc">Set C Locker as Home Key to block Home Key</string>
    <string name="widget_grid">Widget Grid Settings</string>
    <string name="widget_grid_w">Widget Grid Width</string>
    <string name="widget_grid_h">Widget Grid Height</string>
    <string name="widget_settings_tips">
        -Long PRESS on an Empty Space to set widget, wallpaper, grid\n\n
        -Long PRESS on an Apps Widget to resize, delete\n\n
        -Long PRESS on a Default Clock to open 12/24hrs format settings </string>
    <string name="access_desc_enable">Scroll to the Bottom to\nENABLE [C Locker]</string>
    <string name="access_desc_disable">Scroll to the Bottom to\nDISABLE [C Locker]</string>
    <string name="access_summary">C Locker Accessibility Service Information</string>
	<string name="access_desc">C Locker needs Accessibility Service Permission to enable High Security features.
	    \n\nYou may be warned about potential privacy risk, that\'s just a regular informative warning for any accessibility service. 
	    C Locker DOES NOT, and WILL NEVER collect any of your personal information or any text you type in this accessibility service.</string>
    <string name="notice_desc_dialog">TICK [C Locker]\nin this Notification Settings</string>
    <string name="notice_black_list">Blacklist</string>
    <string name="notice_black_list_desc">Set which apps you do NOT wish to show notification</string>
    <string name="introduction">[C] Locker\nYour [C]ustomization\n\nThis Screen will close when C Locker is fully loaded. This loading screen is to prevent security breach</string>
    <string name="fingerprint_unsupport">This device does support Fingerprint feature</string>
    <string name="fingerprint_scan">Scan your Fingerprint to access Shortcut Action in 10 seconds</string>
    <string name="fingerprint_registration_required">Please register your Fingerprint in the System Security Settings
         to continue setting Fingerprint Unlock</string>
    <string name="fingerprint_shortcut_cancelled">Shortcut Action Fingerprint Authentication cancelled</string>
    <string name="group_notice">Group Notification</string>
    <string name="group_notice_desc">The same notifications app will be grouped into one notification</string>
    <string name="lollipop_style_widget">Lollipop Style Widget</string>
    <string name="lollipop_style_widget_desc">PRESS to add new custom widget, LONG PRESS to delete custom widget
        \nNote: Widget size maximum 4x2</string>
    <string name="required_pin">[Enable PIN Unlock] is required</string>
    <string name="notice_style">Notification Style</string>
    <string name="notice_style_lollipop">Lollipop</string>
    <string name="notice_style_side_icon">Side Icons</string>
    <string name="hide_emergency_call">Hide Emergency Call</string>
    <string name="enter_pattern">Enter Pattern</string>
    <string name="block_settings">Block System Settings</string>
    <string name="block_settings_desc">Prevent accessing to System Settings pulling down status bar C Locker is locked</string>
    <string name="block_settings_selection">Please SELECT your default System Settings App</string>
    <string name="pin_required">PIN Option</string>
    <string name="pin_required_desc">Set whether security PIN is required when opening the shortcut call or camera app
        \nNote: Security PIN must be enabled</string>
    <string name="hide_pin_animation">Hide PIN/Pattern</string>
    <string name="hide_pin_animation_desc">PIN/Pattern animation will not show when entering security codes</string>
    <string name="sound_mode">Sound Mode</string>
    <string name="sound_mode_silent">Silent Mode</string>
    <string name="sound_mode_vibration">Vibration Mode</string>
    <string name="sound_mode_normal">Sound Mode</string>
    <string name="add_location">Add New Location</string>
    <string name="home_key_bypass">Enable Home Key Bypass Block</string>
    <string name="home_key_bypass_warn">C Locker is being bypassed, please wait for Locker to relaunch in few seconds. 
        \n\nYou can disable this message in: 
        \nC Locker settings > Other Options > UNTICK:\n[Enable Home Key Bypass Block]</string>
    <string name="auto_security_selfie">Auto Security Selfie</string>
    <string name="auto_security_selfie_desc">Automatically take Selfie with front facing camera, save to your sdcard and email to you when security unlock attempts failed</string>
    <string name="auto_security_selfie_desc1">This one tried to unlock your device \non</string>
    <string name="email_selfie">Email Captured Selfie</string>
    <string name="email_selfie_desc">Immediately send an email with the picture to your gmail account once captured, 
        \n[Gmail Permissions required]</string>
    <string name="show_picture_on_unlock">Show Picture</string>
    <string name="show_picture_on_unlock_desc">Immediately inform you by showing the captured picture after security PIN unlocking</string>
    <string name="no_front_camera">No camera supported</string>
    <string name="attempts">Fail Attempts</string>
    <string name="select_security_type">Select Security Type</string>
    <string name="share">Share</string>
    <string name="share_friends">If you are enjoying this Locker, please share this app with your friends</string>
    <string name="pin">PIN</string>
    <string name="pattern">Pattern</string>
    <string name="forgot">Forgot Your PIN?</string>
    <string name="checking_connection">Checking internet connection..</string>
    <string name="required_internet">Google Account Verification requires internet connection, would you like to enable Mobile Data?</string>
    <string name="sec">second</string>
    <string name="secs">seconds</string>
    <string name="min">minute</string>
    <string name="mins">minutes</string>
    <string name="hr">hour</string>
    <string name="hrs">hours</string>
    <string name="center">Center</string>
    <string name="bottom">Bottom</string>
    <string name="unlocking_style">Unlock Style</string>
    <string name="lolipop_unlock">Simple Unlock</string>
    <string name="lolipop_unlock_desc1">Slide UP to "Unlock"</string>
    <string name="lolipop_unlock_desc2">Slide UP to "Open Camera"</string>
    <string name="lolipop_unlock_desc3">Slide UP to "Make a Call"</string>
    <string name="lolipop_unlock_desc4">Slide from LEFT/RIGHT EDGE of screen to "Open Shortcuts List"</string>
    <string name="gesture_unlock">Gesture Unlock</string>
    <string name="gesture_unlock_desc1">Slide UP/DOWN/LEFT/RIGHT to "Unlock"</string>
    <string name="fingerprint_unlock">Fingerprint Unlock</string>
    <string name="fingerprint_unlock_desc1">Scan your FINGERPRINT to "Unlock"</string>
    <string name="fingerprint_unlock_desc2">Slide from RIGHT EDGE of screen to "Open Shortcuts List"</string>
    <string name="fingerprint_unlock_desc3">Slide from LEFT EDGE of screen to "Open PIN Unlock" (in case Fingerprint fails)</string>
    <string name="center_ring">Center Ring</string>
    <string name="center_ring_desc">CLICK&amp;DRAG the center Lock Icon towards any other Icon to either UNLOCK the phone or OPEN an pre-assigned Shortcut App</string>
    <string name="bottom_ring">Bottom Ring</string>
    <string name="bottom_triagle">Bottom Triangle</string>
    <string name="block_recent_apps">Block Recent Apps</string>
    <string name="block_recent_apps_desc">Tick to block recent apps popping up</string>
    <string name="block_other_apps">Block Other Apps</string>
    <string name="block_other_apps_desc">Block all systems, notification Apps which are not from C Locker Shortcuts when they show up</string>
    <string name="direct_call">Direct Call</string>
    <string name="open_dia_pad">Open Dial Pad</string>
    <string name="unlock_to_launcher">Unlock to Home Launcher</string>
    <string name="unlock_to_launcher_desc">Always return to home launcher when unlocking from Locker</string>
    <string name="block_widget_click">Widgets Clickable</string>
    <string name="block_widget_click_desc1">Select widgets to be clickable on Lock Screen, the Non-Clickable Widgets can be UNLOCKED by TRIPLE SWIPE DOWN gesture on the Lock Screen</string>
    <string name="select_launcher">Step 1: Select Launcher</string>
    <string name="copy_time_profile">Copy from Time Profile</string>
    <string name="copy_wifi_profile">Copy from Wifi Profile</string>
    <string name="copy_Bluetooth_profile">Copy from Bluetooth Profile</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="copy_locker_profile">Copy from Locker Profile</string>
    <string name="copy_music_profile">Copy from Music Profile</string>
    <string name="copy_location_profile">Copy from Location Profile</string>
    <string name="select_all_pin">Select all PIN</string>
    <string name="deselect_all_pin">Deselect all PIN</string>
    <string name="reset_current_profile">Reset Current Profile</string>
    <string name="reset_all_profile">Reset All Profiles</string>
    <string name="ctr_tv_animation_desc">Enable Old TV animation when screen turns on</string>
    <string name="ctr_tv_animation">Enable CRT Animation</string>
    <string name="finish_anim_desc">Set Unlock Animation</string>
    <string name="default_">Default</string>
    <string name="finish_anim_zoom_out">Zoom out</string>
    <string name="finish_anim_zoom_in">Zoom in</string>
    <string name="finish_anim_rotation">Rotation</string>
    <string name="settings_widget_help">Tips</string>
    <string name="settings_display_statusbar_hide">Hide Status Bar</string>
    <string name="settings_clock_analog_color1">Analog Clock</string>
    <string name="settings_bottom_bar_tab_color1">Bottom Bar Tab</string>
    <string name="color_locker_text">Locker Texts</string>
    <string name="color_locker_blinking">Lock Layout Animation</string>
    <string name="color_locker_icon_bg">Shortcut Icons Background</string>
    <string name="color_bottom_bar_btty_lvl">Bottom Bar Battery Level</string>
    <string name="color_bottom_bar_text">Bottom Notice Bar Texts</string>
    <string name="settings_rate_myapp">Rate Me</string>
    <string name="settings_backup_restore">Backup and Restore</string>
    <string name="set_wallpaper_dim_desc">Set Wallpaper Dimming Level</string>
    <string name="set_wallpaper_dim_none">None</string>
    <string name="set_wallpaper_dim_light">Light Dark</string>
    <string name="set_wallpaper_dim_dark">Dark</string>
    <string name="set_portrait">Enable Screen Portrait Only</string>
    <string name="set_portrait_desc">Set to enable Screen in Portrait mode and disable Landscape mode</string>
    <string name="set_wallpaper">Select Wallpaper to display on the lockscreen</string>
    <string name="home_wallpaper">Home Screen Wallpaper/Live Wallpaper</string>
    <string name="from_picture">From Picture Gallery</string>
</resources>