<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemShortcutListHelp"
        android:showAsAction="never|collapseActionView"
        android:title="@string/settings_widget_help"></item>
    <item
        android:id="@+id/itemSelectAllPin"
        android:showAsAction="never|collapseActionView"
        android:title="@string/select_all_pin"></item>
    <item
        android:id="@+id/itemDeselectAllPin"
        android:showAsAction="never|collapseActionView"
        android:title="@string/deselect_all_pin"></item>
    <item
        android:id="@+id/itemCopyFromLockerProfile"
        android:showAsAction="never|collapseActionView"
        android:title="@string/copy_locker_profile"></item>
    <item
        android:id="@+id/itemCopyFromMusicProfile"
        android:showAsAction="never|collapseActionView"
        android:title="@string/copy_music_profile"></item>
    <item
        android:id="@+id/itemCopyFromLocationProfile"
        android:showAsAction="never|collapseActionView"
        android:title="@string/copy_location_profile"></item>
    <item
        android:id="@+id/itemCopyFromTimeProfile"
        android:showAsAction="never|collapseActionView"
        android:title="@string/copy_time_profile"></item>
    <item
        android:id="@+id/itemCopyFromWifiProfile"
        android:showAsAction="never|collapseActionView"
        android:title="@string/copy_wifi_profile"></item>
    <item
        android:id="@+id/itemCopyFromBluetoothProfile"
        android:showAsAction="never|collapseActionView"
        android:title="@string/copy_Bluetooth_profile"></item>
    <item
        android:id="@+id/itemResetShortcuts"
        android:showAsAction="never|collapseActionView"
        android:title="@string/reset_current_profile"></item>
    <item
        android:id="@+id/itemResetAllProfileShortcuts"
        android:showAsAction="never|collapseActionView"
        android:title="@string/reset_all_profile"></item>
</menu>