<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemShare"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        android:showAsAction="always"
        android:title="@string/share"></item>
    <item
        android:id="@+id/itemRate"
        android:icon="@drawable/abc_btn_rating_star_off_mtrl_alpha"
        android:showAsAction="always"
        android:title="@string/settings_rate_myapp"></item>
    <item
        android:id="@+id/itemBackupRestore"
        android:showAsAction="never|collapseActionView"
        android:title="@string/settings_backup_restore"></item>
    <item
        android:id="@+id/itemDelLog"
        android:showAsAction="never|collapseActionView"
        android:title="Clear Logs"></item>
</menu>