<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:showDividers="none">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="none">

            <LinearLayout
                android:id="@+id/lytDisplayFullScreen"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height"
                android:background="@drawable/layout_selector"
                android:gravity="left|center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_large"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/settings_display_statusbar_hide"
                    android:textColor="@color/colorTextTitle"
                    android:textSize="@dimen/text_size_title" />

                <include
                    android:id="@+id/cBoxDisplayFullScreen"
                    layout="@layout/view_checkbox_right" />
            </LinearLayout>

            <include layout="@layout/view_line_vertical" />

            <LinearLayout
                android:id="@+id/lytSetPortrait"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_selector"
                android:gravity="left|center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_large"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_portrait"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="@dimen/text_size_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_portrait_desc"
                        android:textColor="@color/colorTextDesc"
                        android:textSize="@dimen/text_size_decs" />
                </LinearLayout>

                <include
                    android:id="@+id/cBoxSetPortrait"
                    layout="@layout/view_checkbox_right" />
            </LinearLayout>

            <include layout="@layout/view_line_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:paddingTop="@dimen/padding_small"
                android:text="@string/wallpaper"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/text_size_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:text="@string/set_wallpaper"
                android:textColor="@color/colorTextDesc"
                android:textSize="@dimen/text_size_decs" />

            <RadioButton
                android:id="@+id/rBtn_setWallpaperHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@string/home_wallpaper" />

            <RadioButton
                android:id="@+id/rBtn_setWallpaperFromPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@string/from_picture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:paddingTop="@dimen/padding_small"
                android:text="@string/set_wallpaper_dim_desc"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/text_size_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:paddingTop="@dimen/padding_small">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/set_wallpaper_dim_none" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/set_wallpaper_dim_light" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/set_wallpaper_dim_dark" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBarWallpaperDimLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="9"
                android:paddingBottom="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:paddingTop="@dimen/padding_small"
                android:progress="1" />

            <include layout="@layout/view_line_vertical" />

            <LinearLayout
                android:id="@+id/lytCtrTvAnmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_selector"
                android:gravity="left|center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/padding_large"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/padding_small"
                    android:paddingTop="@dimen/padding_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ctr_tv_animation"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="@dimen/text_size_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ctr_tv_animation_desc"
                        android:textColor="@color/colorTextDesc"
                        android:textSize="@dimen/text_size_decs" />
                </LinearLayout>

                <include
                    android:id="@+id/cBoxCtrTvAnmation"
                    layout="@layout/view_checkbox_right" />
            </LinearLayout>

            <include layout="@layout/view_line_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:paddingTop="@dimen/padding_small"
                android:text="@string/finish_anim_desc"
                android:textColor="@color/colorTextTitle"
                android:textSize="@dimen/text_size_title" />

            <RadioButton
                android:id="@+id/rBtnUnlockAnimDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_small"
                android:checked="true"
                android:text="@string/default_" />

            <RadioButton
                android:id="@+id/rBtnUnlockAnimZoomOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@string/finish_anim_zoom_out" />

            <RadioButton
                android:id="@+id/rBtnUnlockAnimZoomIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@string/finish_anim_zoom_in" />

            <RadioButton
                android:id="@+id/rBtnUnlockAnimRotation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@string/finish_anim_rotation" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>